2009-06-03  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/cms.py:
	Don't check hierarchy cycles on new records (they can't be parents of existing items)..

2009-06-02  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/web.py:
	Allow easier 'User' customization.  Compare password through 'User' instance..

2009-05-29  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Allow dynamic construction of user selactable filters..

2009-05-28  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/cms.py:
	Check hierarchy cycles and duplicate order at the same hierarchy level..

2009-05-28  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/cms.py:
	Avoid startup dependency on web modules..

2009-05-28  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/search.py:
	Fixed removal of the first operator in filtering dialog..

2009-05-25  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Pass keyword arguments to the parent class in `DBPostgreSQLCounter' constructor..

2009-05-15  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/web.py:
	Added support for actions in static rights definitions and OWNER role checking. .

2009-05-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/web.py:
	Re-enable access of web server to CMS modules after previous access rights restriction..

2009-05-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/cms.py:
	Update existing action descriptions when reloading module actions..

2009-05-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/cms.py:
	Use a default action description when do description is found..

2009-05-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/cms.py:
	Added basic settings of access rights for the users of CMS..

2009-05-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/dialog.py:
	Added `CheckListDialog' -- a dialog with a list of chackable items..
