@@ -1,5 +1,10 @@
 2009-06-03  Tomas Cerha  <cerha@brailcom.org>
 
+	* lib/pytis/extensions/cms/web.py:
+	Invoke standard Wiking processing for embedded modules instead of using the `embed()' method..
+
+2009-06-03  Tomas Cerha  <cerha@brailcom.org>
+
 	* lib/pytis/extensions/cms/cms.py:
 	Don't check hierarchy cycles on new records (they can't be parents of existing items)..
 
